<resources>
    <string name="app_name">AyonixAndroidSDKdemo</string>
    <string name="action_settings">Settings</string>
    <string name="take_picture">Take picture</string>
    <string name="textview">TextView</string>
    <string name="ayonix_faceid">Ayonix FaceID</string>
    <string name="enroll">Enroll</string>
    <string name="match">Match</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete All</string>
    <string name="remove">Remove</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="mugshot_image">mugshot image</string>
    <string name="matched_mugshot">matched mugshot</string>
    <string name="check_box_to_show_selection">check box to show selection</string>
    <string name="used_to_show_blurry_image">used to show blurry image</string>
</resources>
